opam-version: "2.0"
name: "scaml"
version: "1.0.0"
authors: "Jun Furuse"
maintainer: "jun.furuse@gmail.com"
synopsis: "SCaml, Smart Contract Abstract Machine Language"
homepage: "https://gitlab.com/dailambda/scaml/"
bug-reports: "https://gitlab.com/dailambda/scaml/"
dev-repo: "git://https://gitlab.com/dailambda/scaml/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { = "4.07.1" }
  "ocaml-migrate-parsetree"
  "ppxx"
  "spotlib"
  "dune" {build & >= "1.0"}
  "hex"
  "ptime"
  "zarith"
]
