opam-version: "2.0"
name: "scaml"
version: "1.1.1"
authors: "Jun Furuse"
maintainer: "jun.furuse@dailambda.jp"
synopsis: "SCaml, Smart Contract Abstract Machine Language"
homepage: "https://gitlab.com/dailambda/scaml/"
bug-reports: "https://gitlab.com/dailambda/scaml/"
dev-repo: "git://https://gitlab.com/dailambda/scaml/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" { build & >= "1.0" }
  "ocamlfind" { build }
  "ocaml" { = "4.07.1" }
  "ocaml-migrate-parsetree"
  "ppxx"
  "spotlib"
  "hex"
  "ptime"
  "zarith"
  "tezos-data-encoding"
  "tezos-error-monad"
  "tezos-micheline"
  "tezos-stdlib"
  "camlon"
  "ppx_meta_conv"
  "ppxlib" { = "0.8.1" }
]
