opam-version: "2.0"
name: "scaml"
version: "1.2.0"
authors: "Jun Furuse"
maintainer: "jun.furuse@dailambda.jp"
synopsis: "SCaml, Smart Contract Abstract Machine Language"
homepage: "https://gitlab.com/dailambda/scaml/"
bug-reports: "https://gitlab.com/dailambda/scaml/"
dev-repo: "git://https://gitlab.com/dailambda/scaml/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" { build & >= "2.5" }
  "ocamlfind" { build }
  "ocaml" { = "4.09.1" }
  "ocaml-migrate-parsetree"
  "ppxx"
  "spotlib"
  "hex"
  "ptime"
  "zarith"
  "data-encoding" { = "0.2" }
  "tezos-error-monad" { = "7.0" }
  "tezos-micheline" { = "7.0" } 
  "tezos-stdlib" { = "7.0" }
  "tezos-crypto" { = "7.0" }
  "camlon"
  "ppx_meta_conv"
  "ppxlib" { = "0.8.1" }
  "typerep"
  "ppx_typerep_conv"
]
