opam-version: "1.2"
version: "1.5.0"
maintainer: "jun.furuse@gmail.com"
authors: "Jun Furuse"
homepage: "http://bitbucket.org/camlspotter/typpx"
bug-reports:
  "https://bitbucket.org/camlspotter/typpx/issues?status=new&status=open"
dev-repo: "hg://https://bitbucket.org/camlspotter/typpx"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {build}
  "ppxx" {>= "2.3.0" & < "2.4.0"}
]
available: [ocaml-version = "4.07.1" ]
